<resources>
    <string name="app_name">Project 2</string>
    <string name="create_account">Create Account</string>
    <string name="reserve_seat">Reserve Seat</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="manage_system">Manage System</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_reserve_seat">ReserveSeat</string>
    <string name="title_activity_cancel_reservation">CancelReservation</string>
    <string name="title_activity_manage_system">ManageSystem</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="okay">Okay</string>
    <string name="search_flight">Search Flight</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="ticket_total">Tickets</string>
    <string name="title_activity_system_logs">SystemLogs</string>
    <string name="title_activity_choose_flight">ChooseFlight</string>
    <string name="title_activity_confirm_seat_reservation">ConfirmSeatReservation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_flight">Would you like to create a flight?</string>
    <string name="title_activity_new_flight">NewFlight</string>
    <string name="flight_number">Flight Number</string>
    <string name="departure_time">Departure Time</string>
    <string name="flight_capacity">Flight Capacity</string>
    <string name="price">Price</string>
    <string name="add_flight">Add Flight</string>

</resources>
