<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16pt"
        android:textSize="24pt"
        android:textAlignment="center"
        android:text="@string/app_name"/>

    <Button
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40pt"
        android:textAlignment="center"
        android:text="@string/create_account"
        android:id="@+id/createAccount"/>

    <Button
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8pt"
        android:textAlignment="center"
        android:text="@string/reserve_seat"
        android:id="@+id/reserveSeat"/>

    <Button
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8pt"
        android:textAlignment="center"
        android:text="@string/cancel_reservation"
        android:id="@+id/cancelReservation"/>

    <Button
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8pt"
        android:textAlignment="center"
        android:text="@string/manage_system"
        android:id="@+id/manageSystem"/>


</LinearLayout>