<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32pt"
        android:text="@string/create_account"
        android:textAlignment="center"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8pt"
        android:textSize="12pt"
        android:hint="@string/username_placeholder"
        android:textAlignment="center"
        android:id="@+id/usernameEditText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8pt"
        android:textSize="12pt"
        android:hint="@string/password_placeholder"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8pt"
        android:text="@string/okay"
        android:textAlignment="center"
        android:id="@+id/checkButton"/>
</LinearLayout>